# llvm-test

./: .gitignore  Cargo.toml  README.md  build_llvm.txt  reference.md  todos.md
.cargo/: config.toml
sources/: simple.txt  simple2.txt
sources/std/: core.txt  externals.txt
src/: ast.rs  compiler.rs  console.rs  core.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  measurement.rs  parser.rs  program.rs  token.rs  typecheck.rs  util.rs
